# PQC-Control-Plane

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  POLICY.md  README.md  README_vdc.md  SECURITY.md  THREAT_MODEL.md  conftest.py  debug_plan.py  debug_relax.py  docker-compose.yml  provenance.json  requirements.txt  tmp_metrics_inspect.py  tmp_util_inspect.py  uvicorn.err
.github/: pull_request_template.md
config/: clients.json  controller.yml
grafana/: breaker_dashboard.json
gtm/: demo-script.md  one-pager.md  outreach-email.txt  pilot-plan.md
keys/: client_demo_sk.pem  sth_ed25519_pk.pem  sth_ed25519_sk.pem
policy/: shield.rego
postman/: Signet-PQC.postman_collection.json
pqc-calibrator/: README.md
receipt_sink/: go.mod  go.sum  main.go
sandbox/envoy/wasm/dpr_signer/: Cargo.toml  README.md
sandbox/envoy/wasm/dpr_signer/src/: lib.rs
scenarios/: sample-chaos.yaml
scripts/: build_compliance_pack.ps1  configure_toxiproxy.ps1  demo_pilot.ps1  e2e_envoy_exporter.ps1  e2e_pch.ps1  fault_abort.sh  fault_abort_reset.sh  gen_dev_tls.ps1  gen_sbom_provenance.ps1  netem_reset.sh  netem_tc.sh  run_vsp.ps1  toggle_toxics.ps1
tests/: test_alg_variants.py  test_binding_exporter.py  test_breaker.py  test_breaker_hysteresis.py  test_cbom.py  test_cbom_export.py  test_controller_basic.py  test_ct_eq.py  test_dpcp.py  test_fuzz_canonicalization.py  test_header_budget.py  test_header_budget_legacy.py  test_l7_loadshed.py  test_metrics_api.py  test_metrics_endpoint.py  test_monitor.py  test_pch_bad_signature.py  test_pch_ok.py  (+17 more)
(+970 files in other folders)
