[package]
name = "dpr_signer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "1", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10" # for SHA-384 via Sha384
hkdf = "0.12"
once_cell = "1.19"
hex = "0.4"

[features]
default = []
